--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon",
+    "dev": "NODE_ENV=development nodemon --quiet",
     "server": "node --harmony src/index.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/jmorille/jenkinsAgent#readme",
   "dependencies": {
+    "actions-on-google": "^1.10.0",
     "jenkins": "^0.20.1",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
