--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "koa-favicon": "^2.0.0",
     "koa-json-error": "^3.1.2",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "node-fetch": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
