--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon --quiet",
-    "server": "node --harmony src/index.js",
+    "dev": "nodemon --quiet",
+    "server": "NODE_ENV=development  node --harmony src/index.js",
     "build": "webpack --mode='production'"
   },
   "repository": {
