--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,11 @@ services:
     hostname: "thor"
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url "https://thor"
+        external_url "http://thor"
         # Add any other gitlab.rb configuration here, each on its own line
         gitlab_rails['gitlab_shell_ssh_port'] = 2224
     ports:
       - "80:80"
-      - "443:443"
       - "2224:22"
     volumes:
       - "./data/gitlab/config:/etc/gitlab"
