--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.5"
 services:
   jenkins:
     image: jenkins/jenkins
@@ -27,3 +27,15 @@ services:
       - "./data/gitlab/logs:/var/log/gitlab"
       - "./data/gitlab/data:/var/opt/gitlab"
 
+  nexus:
+    image: "sonatype/nexus3"
+    container_name: nexus
+    ports:
+      - "8081:8081"
+    volumes:
+      - "nexus-data:/nexus-data"
+
+
+volumes:
+
+ nexus-data:
