--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "node-fetch": "^2.1.1",
-    "properties": "^1.2.1"
+    "properties": "^1.2.1",
+    "read-env": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2",
