--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Jenkins Agent",
   "main": "src/index.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --quiet",
     "sec:check": "nsp check --reporter checkstyle",
     "server": "NODE_ENV=development  node --harmony src/index.js",
-    "build": "webpack --mode='production'"
+    "build": "webpack --mode='production'",
+    "dev2": "webpack --mode='development' --watch"
   },
   "repository": {
     "type": "git",
@@ -24,27 +26,27 @@
   },
   "homepage": "https://github.com/jmorille/jenkinsAgent#readme",
   "dependencies": {
+    "actions-on-google": "^2.1.1",
+    "compression": "^1.7.2",
+    "express": "^4.16.3",
+    "express-winston": "^2.5.1",
     "htmlparser2": "^3.9.2",
     "jenkins": "^0.20.1",
-    "koa": "^2.5.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-compress": "^2.0.0",
-    "koa-favicon": "^2.0.0",
-    "koa-http-basic-auth": "^1.0.2",
-    "koa-json-error": "^3.1.2",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
     "node-fetch": "^2.1.1",
     "properties": "^1.2.1",
-    "read-env": "^1.1.1"
+    "read-env": "^1.1.1",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.2",
     "nsp": "^3.2.1",
     "nsp-reporter-checkstyle": "^1.1.0",
     "shebang-loader": "0.0.1",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.8.3",
+    "typings": "^2.1.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.6.0"
   }
 }
