--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,14 @@
 version: "3.5"
 services:
-  jenkins:
-    image: jenkins/jenkins
-    container_name: jenkins
-    user: jenkins
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock 
+  keycloak-proxy:
+    image: jboss/keycloak-proxy
     ports:
-      - "8080:8080" 
-      - "50000:50000"
-
-  gitlab:
-    image: "gitlab/gitlab-ce:latest"
-    restart: always
-    hostname: "thor"
-    environment:
-      GITLAB_OMNIBUS_CONFIG: |
-        external_url "http://thor"
-        # Add any other gitlab.rb configuration here, each on its own line
-        gitlab_rails['gitlab_shell_ssh_port'] = 2224
-    ports:
-      - "80:80"
-      - "2224:22"
+      - "3001:3001"
     volumes:
-      - "./data/gitlab/config:/etc/gitlab"
-      - "./data/gitlab/logs:/var/log/gitlab"
-      - "./data/gitlab/data:/var/opt/gitlab"
-
-  nexus:
-    image: "sonatype/nexus3"
-    container_name: nexus
-    ports:
-      - "8081:8081"
-    volumes:
-      - "nexus-data:/nexus-data"
+      - "./keycloak-proxy.json:/opt/jboss/conf/proxy.json"
+    networks:
+      - dory-network
 
 
-volumes:
-
- nexus-data:
+networks:
+    dory-network:
