--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
     "actions-on-google": "^2.1.1",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "express-winston": "^2.5.1",
     "htmlparser2": "^3.9.2",
     "jenkins": "^0.20.1",
+    "keycloak-connect": "^4.0.0-beta.2",
     "node-fetch": "^2.1.1",
     "properties": "^1.2.1",
     "read-env": "^1.1.1",
     "winston": "^2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2",
+    "nodemon": "^1.17.4",
     "nsp": "^3.2.1",
     "nsp-reporter-checkstyle": "^1.1.0",
     "shebang-loader": "0.0.1",
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
-    "typings": "^2.1.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.6.0"
