--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/index.js",
   "mode": "esm",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node  ./bin/www/app.js",
     "test": "NODE_ENV=test mocha 'test/**/*.spec.js'",
     "dev": "nodemon --quiet",
     "sec:check": "nsp check --reporter checkstyle",
     "server": "NODE_ENV=development  node --harmony src/index.js",
     "build": "webpack --mode='production'",
-    "dev2": "webpack --mode='development' --watch"
+    "dev2": "webpack --mode='development' --watch",
+    "package": "yarn install --no-bin-links --prod"
   },
   "repository": {
     "type": "git",
@@ -27,31 +28,31 @@
   },
   "homepage": "https://github.com/jmorille/jenkinsAgent#readme",
   "dependencies": {
-    "actions-on-google": "^2.1.1",
+    "actions-on-google": "^2.1.3",
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-winston": "^2.5.1",
     "htmlparser2": "^3.9.2",
     "jenkins": "^0.20.1",
-    "keycloak-connect": "^4.0.0-beta.2",
-    "node-fetch": "^2.1.1",
+    "keycloak-connect": "^4.0.0",
+    "node-fetch": "^2.1.2",
     "properties": "^1.2.1",
-    "read-env": "^1.1.1",
-    "winston": "^2.4.2"
+    "read-env": "^1.2.0",
+    "winston": "^2.4.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.1.1",
-    "nodemon": "^1.17.4",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
     "nsp": "^3.2.1",
     "nsp-reporter-checkstyle": "^1.1.0",
     "shebang-loader": "0.0.1",
-    "sinon": "^5.0.7",
-    "ts-loader": "^4.3.0",
-    "typescript": "^2.8.3",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3",
-    "webpack-node-externals": "^1.6.0"
+    "sinon": "^5.1.1",
+    "ts-loader": "^4.4.1",
+    "typescript": "^2.9.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
