--- a/package.json
+++ b/package.json
@@ -34,10 +34,17 @@
     "express-session": "^1.15.6",
     "express-winston": "^2.5.1",
     "htmlparser2": "^3.9.2",
+    "install": "^0.12.2",
     "jenkins": "^0.20.1",
     "keycloak-connect": "^4.0.0",
+    "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "moment": "^2.22.2",
     "node-fetch": "^2.1.2",
+    "npm": "^6.6.0",
     "properties": "^1.2.1",
     "read-env": "^1.2.0",
     "winston": "^2.4.3"
