--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/jmorille/jenkinsAgent#readme",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "actions-on-google": "^2.1.3",
     "compression": "^1.7.2",
     "express": "^4.16.3",
